Changed package description for experimental code.
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/FOP_0-20-0_Alt-Design@194792 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/org/apache/fop/datatypes/package.html
+++ b/src/org/apache/fop/datatypes/package.html
@@ -1,6 +1,6 @@
 <HTML>
 <TITLE>org.apache.fop.datatypes Package</TITLE>
 <BODY>
-<P>XSL Datatypes</P>
+<P>FOP representations of the XSL Datatypes and other pseudo-types</P>
 </BODY>
 </HTML>
