--- a/src/org/apache/fop/pdf/package.html
+++ b/src/org/apache/fop/pdf/package.html
@@ -1,7 +1,7 @@
 <HTML>
 <TITLE>org.apache.fop.pdf Package</TITLE>
 <BODY>
-<P>Classes for handling the low-level creation of PDF documents</P>
+<P>Classes for handling the low-level creation of PDF documents.</P>
 <P>These classes were developed for FOP, but could be used by other
 applications wishing to produce PDF.</P>
 </BODY>
