--- a/src/org/apache/fop/render/pdf/package.html
+++ b/src/org/apache/fop/render/pdf/package.html
@@ -1,6 +1,6 @@
 <HTML>
 <TITLE>org.apache.fop.render.pdf Package</TITLE>
 <BODY>
-<P>classes for rendering to PDF</P>
+<P>Classes for rendering the Area Tree to PDF.</P>
 </BODY>
 </HTML>
