--- a/src/org/apache/fop/render/xml/package.html
+++ b/src/org/apache/fop/render/xml/package.html
@@ -1,6 +1,6 @@
 <HTML>
 <TITLE>org.apache.fop.render.xml Package</TITLE>
 <BODY>
-<P>classes for rendering to XML for debugging</P>
+<P>Classes for rendering the Area Tree to XML (for debugging).</P>
 </BODY>
 </HTML>
